--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,11 @@ version = '1.0.0-SNAPSHOT'
 
 repositories {
   mavenCentral()
+  maven { url 'https://jitpack.io' }
 }
 
 ext {
-  vertxVersion = '3.8.4'
+  vertxVersion = '4.0.0-milestone4'
   junitJupiterEngineVersion = '5.4.0'
   testContainersVersion = '1.12.3'
 }
@@ -24,23 +25,25 @@ application {
 
 sourceCompatibility = '11'
 
-def mainVerticleName = 'io.appwish.wishservice.GRPCVerticle'
+def mainVerticleName = 'io.appwish.wishservice.MainVerticle'
 def watchForChange = 'src/**/*'
 def doOnChange = './gradlew classes'
 
 dependencies {
-  implementation "io.vertx:vertx-mongo-client:$vertxVersion"
+  implementation "io.vertx:vertx-pg-client:$vertxVersion"
   implementation "io.vertx:vertx-grpc:$vertxVersion"
   implementation "io.vertx:vertx-config:$vertxVersion"
   implementation "javax.annotation:javax.annotation-api:1.3.2"
   implementation "com.google.protobuf:protobuf-java-util:3.0.0-beta-1"
+  implementation 'com.github.BAData:protobuf-converter:1.1.5'
 
-  testImplementation "io.vertx:vertx-junit5:$vertxVersion"
   testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitJupiterEngineVersion"
+  testImplementation "io.vertx:vertx-junit5:$vertxVersion"
   testImplementation "org.junit.jupiter:junit-jupiter-api:$junitJupiterEngineVersion"
   testImplementation "org.testcontainers:testcontainers:$testContainersVersion"
   testImplementation "org.testcontainers:junit-jupiter:$testContainersVersion"
   testImplementation "org.mockito:mockito-core:2.23.4"
+  testImplementation "io.zonky.test:embedded-postgres:1.2.6"
 }
 
 sourceSets {
